# python-packaging-tutorial

./: README.md  pyproject.toml
.github/workflows/: release.yml
tests/: test_example.py
